lei21_22_s4_2dd_03/base.core/src/main/java/eapli/base/surveymanagement/grammar/answerverifier/generated/AnswerVerifierParser.java
// Generated from E:/Backup/UNI/Ano 2/Semestre 2/LAPR4/lei21_22_s4_2dd_03/base.core/src/main/java/eapli/base/surveymanagement/grammar/answerverifier\AnswerVerifier.g4 by ANTLR 4.10.1
package eapli.base.surveymanagement.grammar.answerverifier.generated;
import eapli.base.surveymanagement.grammar.questionverifier.VerifierError;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AnswerVerifierParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected ANTLRErrorStrategy _errHandler = new VerifierError();

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, SURVEY=5, QUESTIONNAIRE=6, QUESTION=7, 
		SECTION=8, WELCOME_MESSAGE=9, FINAL_MESSAGE=10, MANDATORY=11, OPTIONAL=12, 
		CONDITIONAL=13, DESCRIPTION=14, ABOUT=15, CATEGORY=16, BRAND=17, INSTRUCTIONS=18, 
		ANSWER=19, LIST_OF_SECTIONS=20, LIST_OF_QUESTIONS=21, LIST_OF_OPTIONS=22, 
		WORD=23, PUNCTUATION=24, SPACE=25, COMMA=26, IGNORE=27, OPTION=28, LETTER=29, 
		NUMBER=30;
	public static final int
		RULE_readSurvey = 0, RULE_readQuestionnaire = 1, RULE_readSection = 2, 
		RULE_readQuestion = 3, RULE_readAnswer = 4, RULE_question = 5, RULE_multiple_choice_question = 6, 
		RULE_choices = 7, RULE_choice = 8, RULE_free_text_question = 9, RULE_answerText = 10, 
		RULE_answerOptions = 11, RULE_option = 12, RULE_text = 13, RULE_phrase = 14, 
		RULE_title = 15, RULE_repeatInfo = 16, RULE_extraInfo = 17, RULE_obli = 18, 
		RULE_welcomeMessage = 19, RULE_finalMessage = 20, RULE_description = 21, 
		RULE_instructions = 22, RULE_surveyID = 23, RULE_questionnaireID = 24, 
		RULE_sectionID = 25, RULE_questionID = 26, RULE_obligatoriness = 27, RULE_repeatability = 28, 
		RULE_repeatID = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"readSurvey", "readQuestionnaire", "readSection", "readQuestion", "readAnswer", 
			"question", "multiple_choice_question", "choices", "choice", "free_text_question", 
			"answerText", "answerOptions", "option", "text", "phrase", "title", "repeatInfo", 
			"extraInfo", "obli", "welcomeMessage", "finalMessage", "description", 
			"instructions", "surveyID", "questionnaireID", "sectionID", "questionID", 
			"obligatoriness", "repeatability", "repeatID"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'-'", "'('", "')'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "' '", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "SURVEY", "QUESTIONNAIRE", "QUESTION", 
			"SECTION", "WELCOME_MESSAGE", "FINAL_MESSAGE", "MANDATORY", "OPTIONAL", 
			"CONDITIONAL", "DESCRIPTION", "ABOUT", "CATEGORY", "BRAND", "INSTRUCTIONS", 
			"ANSWER", "LIST_OF_SECTIONS", "LIST_OF_QUESTIONS", "LIST_OF_OPTIONS", 
			"WORD", "PUNCTUATION", "SPACE", "COMMA", "IGNORE", "OPTION", "LETTER", 
			"NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnswerVerifier.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnswerVerifierParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ReadSurveyContext extends ParserRuleContext {
		public TerminalNode SURVEY() { return getToken(AnswerVerifierParser.SURVEY, 0); }
		public TerminalNode SPACE() { return getToken(AnswerVerifierParser.SPACE, 0); }
		public SurveyIDContext surveyID() {
			return getRuleContext(SurveyIDContext.class,0);
		}
		public ReadQuestionnaireContext readQuestionnaire() {
			return getRuleContext(ReadQuestionnaireContext.class,0);
		}
		public ReadSurveyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readSurvey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterReadSurvey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitReadSurvey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitReadSurvey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadSurveyContext readSurvey() throws RecognitionException {
		ReadSurveyContext _localctx = new ReadSurveyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_readSurvey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(SURVEY);
			setState(61);
			match(SPACE);
			setState(62);
			surveyID();
			setState(63);
			match(T__0);
			setState(64);
			readQuestionnaire();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadQuestionnaireContext extends ParserRuleContext {
		public List<TerminalNode> QUESTIONNAIRE() { return getTokens(AnswerVerifierParser.QUESTIONNAIRE); }
		public TerminalNode QUESTIONNAIRE(int i) {
			return getToken(AnswerVerifierParser.QUESTIONNAIRE, i);
		}
		public List<TerminalNode> SPACE() { return getTokens(AnswerVerifierParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AnswerVerifierParser.SPACE, i);
		}
		public QuestionnaireIDContext questionnaireID() {
			return getRuleContext(QuestionnaireIDContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public WelcomeMessageContext welcomeMessage() {
			return getRuleContext(WelcomeMessageContext.class,0);
		}
		public TerminalNode LIST_OF_SECTIONS() { return getToken(AnswerVerifierParser.LIST_OF_SECTIONS, 0); }
		public ReadSectionContext readSection() {
			return getRuleContext(ReadSectionContext.class,0);
		}
		public FinalMessageContext finalMessage() {
			return getRuleContext(FinalMessageContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AnswerVerifierParser.EOF, 0); }
		public ReadQuestionnaireContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readQuestionnaire; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterReadQuestionnaire(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitReadQuestionnaire(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitReadQuestionnaire(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadQuestionnaireContext readQuestionnaire() throws RecognitionException {
		ReadQuestionnaireContext _localctx = new ReadQuestionnaireContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_readQuestionnaire);
		int _la;
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUESTIONNAIRE:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(QUESTIONNAIRE);
				setState(67);
				match(SPACE);
				setState(68);
				questionnaireID();
				setState(69);
				match(T__0);
				setState(70);
				match(SPACE);
				setState(71);
				title();
				setState(72);
				welcomeMessage();
				setState(73);
				match(LIST_OF_SECTIONS);
				setState(74);
				readSection();
				setState(75);
				match(QUESTIONNAIRE);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(76);
					match(SPACE);
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(82);
				finalMessage();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadSectionContext extends ParserRuleContext {
		public TerminalNode SECTION() { return getToken(AnswerVerifierParser.SECTION, 0); }
		public List<TerminalNode> SPACE() { return getTokens(AnswerVerifierParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AnswerVerifierParser.SPACE, i);
		}
		public SectionIDContext sectionID() {
			return getRuleContext(SectionIDContext.class,0);
		}
		public RepeatInfoContext repeatInfo() {
			return getRuleContext(RepeatInfoContext.class,0);
		}
		public ObliContext obli() {
			return getRuleContext(ObliContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode LIST_OF_QUESTIONS() { return getToken(AnswerVerifierParser.LIST_OF_QUESTIONS, 0); }
		public ReadQuestionContext readQuestion() {
			return getRuleContext(ReadQuestionContext.class,0);
		}
		public ReadSectionContext readSection() {
			return getRuleContext(ReadSectionContext.class,0);
		}
		public ReadSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterReadSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitReadSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitReadSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadSectionContext readSection() throws RecognitionException {
		ReadSectionContext _localctx = new ReadSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_readSection);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SECTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(SECTION);
				setState(88);
				match(SPACE);
				setState(89);
				sectionID();
				setState(90);
				match(T__0);
				setState(91);
				repeatInfo();
				setState(92);
				obli();
				setState(93);
				match(SPACE);
				setState(94);
				match(T__1);
				setState(95);
				match(SPACE);
				setState(96);
				title();
				setState(97);
				description();
				setState(98);
				match(LIST_OF_QUESTIONS);
				setState(99);
				readQuestion();
				setState(100);
				readSection();
				}
				break;
			case QUESTIONNAIRE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadQuestionContext extends ParserRuleContext {
		public TerminalNode QUESTION() { return getToken(AnswerVerifierParser.QUESTION, 0); }
		public ObliContext obli() {
			return getRuleContext(ObliContext.class,0);
		}
		public QuestionIDContext questionID() {
			return getRuleContext(QuestionIDContext.class,0);
		}
		public TerminalNode PUNCTUATION() { return getToken(AnswerVerifierParser.PUNCTUATION, 0); }
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public ReadAnswerContext readAnswer() {
			return getRuleContext(ReadAnswerContext.class,0);
		}
		public ReadQuestionContext readQuestion() {
			return getRuleContext(ReadQuestionContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(AnswerVerifierParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AnswerVerifierParser.SPACE, i);
		}
		public ReadQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterReadQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitReadQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitReadQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadQuestionContext readQuestion() throws RecognitionException {
		ReadQuestionContext _localctx = new ReadQuestionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_readQuestion);
		int _la;
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUESTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(QUESTION);
				setState(106);
				match(T__0);
				setState(107);
				obli();
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(108);
					match(SPACE);
					}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(114);
				match(T__1);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(115);
					match(SPACE);
					}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(121);
				questionID();
				setState(122);
				match(PUNCTUATION);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(123);
					match(SPACE);
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129);
				question();
				setState(130);
				readAnswer();
				setState(131);
				readQuestion();
				}
				break;
			case QUESTIONNAIRE:
			case SECTION:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadAnswerContext extends ParserRuleContext {
		public TerminalNode ANSWER() { return getToken(AnswerVerifierParser.ANSWER, 0); }
		public AnswerTextContext answerText() {
			return getRuleContext(AnswerTextContext.class,0);
		}
		public AnswerOptionsContext answerOptions() {
			return getRuleContext(AnswerOptionsContext.class,0);
		}
		public TerminalNode PUNCTUATION() { return getToken(AnswerVerifierParser.PUNCTUATION, 0); }
		public ReadAnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readAnswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterReadAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitReadAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitReadAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadAnswerContext readAnswer() throws RecognitionException {
		ReadAnswerContext _localctx = new ReadAnswerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_readAnswer);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				match(ANSWER);
				setState(137);
				answerText();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(ANSWER);
				setState(139);
				answerOptions();
				setState(140);
				match(PUNCTUATION);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				match(ANSWER);
				setState(143);
				answerOptions();
				throw new RuntimeException("GRAMMAR ERROR: Missing Final Punctuation! E.g. Period '.'");
				}
				case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				match(ANSWER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionContext extends ParserRuleContext {
		public Free_text_questionContext free_text_question() {
			return getRuleContext(Free_text_questionContext.class,0);
		}
		public Multiple_choice_questionContext multiple_choice_question() {
			return getRuleContext(Multiple_choice_questionContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_question);
		try {
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				free_text_question();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				multiple_choice_question();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multiple_choice_questionContext extends ParserRuleContext {
		public Free_text_questionContext free_text_question() {
			return getRuleContext(Free_text_questionContext.class,0);
		}
		public TerminalNode LIST_OF_OPTIONS() { return getToken(AnswerVerifierParser.LIST_OF_OPTIONS, 0); }
		public ChoicesContext choices() {
			return getRuleContext(ChoicesContext.class,0);
		}
		public Multiple_choice_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_choice_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterMultiple_choice_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitMultiple_choice_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitMultiple_choice_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_choice_questionContext multiple_choice_question() throws RecognitionException {
		Multiple_choice_questionContext _localctx = new Multiple_choice_questionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_multiple_choice_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			free_text_question();
			setState(154);
			match(LIST_OF_OPTIONS);
			setState(155);
			choices();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChoicesContext extends ParserRuleContext {
		public ChoiceContext choice() {
			return getRuleContext(ChoiceContext.class,0);
		}
		public ChoicesContext choices() {
			return getRuleContext(ChoicesContext.class,0);
		}
		public ChoicesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choices; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterChoices(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitChoices(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitChoices(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChoicesContext choices() throws RecognitionException {
		ChoicesContext _localctx = new ChoicesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_choices);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				choice();
				setState(158);
				choices();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				choice();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChoiceContext extends ParserRuleContext {
		public TerminalNode OPTION() { return getToken(AnswerVerifierParser.OPTION, 0); }
		public List<TerminalNode> SPACE() { return getTokens(AnswerVerifierParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AnswerVerifierParser.SPACE, i);
		}
		public List<PhraseContext> phrase() {
			return getRuleContexts(PhraseContext.class);
		}
		public PhraseContext phrase(int i) {
			return getRuleContext(PhraseContext.class,i);
		}
		public ChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).enterChoice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnswerVerifierListener ) ((AnswerVerifierListener)listener).exitChoice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnswerVerifierVisitor ) return ((AnswerVerifierVisitor<? extends T>)visitor).visitChoice(this);
			else return visitor.visitChildren(this);
		}
	}
